eds/blocks/yukon-chat/yukon-chat.css
/* stylelint-disable */
#yukon-chat-modal, .yukon-chat-block {
  --yc-header-color: #131313;
  --yc-container-color: #fff;
  --yc-card-radius: 12px;
  --yc-input-radius: 28px;
  --yc-input-height: 56px;
  --yc-input-border: linear-gradient(98.11deg, #9A3CF9 -4.21%, #E743C8 35.46%, #ED457E 68.67%, #FF7918 104.7%);
  --yc-button-dimensions: 32px;
  --yc-button-radius: 50%;
  --yc-button-color: #292929;
  --yc-keyboard-focus-color: #5574F7;
  --yukon-chat-bg: linear-gradient(122.87deg, #E1E9FF 20.72%, #EFE3FA34 .96%, #F5DFF8 42.08%, #FCDCD5 49.2%, #FFDEC3 91.6%);

}

.yc-block-header {
  color: var(--yc-header-color);
  font-weight: bold;
  width: 100%;
  text-align: right;
  font-size: 22px;
  line-height: 29px;

}
.yukon-chat-block {
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 999;
  gap: 30px;
  margin: 40px auto;
  max-width: 1200px;
  width: 80%;
}

@media (max-width:1199px) {
  .yukon-chat-block {
    flex-direction: column;
  }
  .yc-block-header {
    text-align: center;
  }
}

.yukon-chat-pill {
  box-sizing: border-box;
  top: var(--feds-height-nav);
  max-width: calc(768px - 4px);
  width: 100%;
}

.yc-input-field {
  position: relative;
}

.yc-input-field-container {
  background: var(--yc-container-color);
  border-radius: calc(var(--yc-input-radius) - 2px);
  display: flex;
  flex-direction: row;
  min-height: var(--yc-input-height);
  padding: 0 10px;
  position: relative;
  gap: 12px;
  z-index: 9;
}

.yc-input-field::before {
  background: var(--yc-input-border);
  border-radius: var(--yc-input-radius);
  content: '';
  height: 100%;
  left: 50%;
  padding: 2px;
  position: absolute;
  top: 50%;
  transform: translate(-50%, -50%);
  width: 100%;
}

.yc-input-field::after {
  background: var(--yc-input-border);
  border-radius: var(--yc-input-radius);
  content: '';
  filter: blur(30px);
  height: 100%;
  left: 50%;
  opacity: 0.5;
  position: absolute;
  top: 50%;
  transform: translate(-50%, -50%);
  transition: opacity 0.3s ease;
  width: 100%;
  z-index: 1;
}

.yc-input-field-container:has(input:focus-visible) {
  outline: 2px solid var(--yc-keyboard-focus-color);
}

.yc-input-field-label {
  border-radius: var(--yc-button-radius);
  outline-offset: 6px;
  display: flex;
  align-items: center;
  user-select: none;
  align-self: flex-start;
  margin-right: -8px;
  margin-top: 12px;
  height: 32px;
  width: 32px;
  justify-content: center;
  flex-shrink: 0;
}

[dir="rtl"] .yc-input-field-label {
  margin-right: unset;
  margin-left: -8px;
}

.yc-input-field-label:focus-visible {
  outline: 2px solid var(--yc-keyboard-focus-color);
  outline-offset: 2px;
}
/* ... */

